# data_collection_ws

./: .gitignore  .gitmodules  glove_calibration.json
control_server/: app.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/camera_bridge/share/camera_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/data_recorder_interfaces/share/data_recorder_interfaces/: local_setup.sh  package.bash  (+4 more)
install/data_recorder_ros2/share/data_recorder_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/data_recorder_ros2/share/data_recorder_ros2/config/: camera1.yaml  camera2.yaml
install/data_recorder_ros2/share/data_recorder_ros2/launch/: data_recorder_bringup.launch.py  recorder.launch.py  rs_dual.launch.py  usb_camera.launch.py
log/: latest_build
src/: useful_line
src/camera_bridge/: setup.py
src/camera_bridge/camera_bridge/: camera_receiver.py
src/data_recorder_interfaces/: CMakeLists.txt
src/data_recorder_ros2/: CMakeLists.txt  MANIFEST.in  setup.cfg  setup.py
src/data_recorder_ros2/data_recorder_ros2/: heartbeat_publisher.py  isaac_sim_movetest.py  recorder_service.py
src/data_recorder_ros2/launch/: rs_d435i.launch.py  scale.launch.py
src/piper_teleop/: package.xml  setup.cfg  setup.py
src/piper_teleop/piper_teleop/: teleop_absolute_wrist.py  teleop_node.py
src/tracker_bridge/: package.xml  setup.cfg  setup.py
src/tracker_bridge/launch/: tracker_bridge.launch.py
src/tracker_bridge/tracker_bridge/: plot_trackers.py  tracker_server.py
(+109 files in other folders)
