<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>data_recorder_ros2</name>
  <version>0.0.0</version>
  <description>Data recorder nodes ported to ROS 2</description>
  <maintainer email="Bryce.lam@hotmail.com">bryce</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>data_recorder_interfaces</depend>
  <exec_depend>pyserial</exec_depend>

  <exec_depend>launch</exec_depend> 
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
